# AI_Medical_Triage

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
app/: data.py  env.py  grader.py  main.py  models.py  tasks.py
baseline/: run_baseline.py
